<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_eu__k__main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="at.fh_joanneum.eu_k.EU_K_MAIN"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/HEADER_COLOR"
        android:theme="?attr/actionBarTheme"
        android:minHeight="?attr/actionBarSize"
        android:id="@+id/toolbar3"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textSize="50sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textStyle="normal|italic"
        android:layout_marginLeft="@dimen/activity_horizontal_margin" />

    <TextView
        android:text="@string/introduction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/introduction"
        android:layout_below="@+id/textView"
        android:layout_marginTop="23dp"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/eu_k_sign"
        android:id="@+id/imageView"
        android:layout_alignBottom="@+id/toolbar3"
        android:layout_alignStart="@+id/btn_SendLoc"
        android:layout_alignEnd="@+id/btn_SendLoc" />

    <Button
        android:text="@string/showLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_ownLocation"
        android:onClick="onClickMyLocation"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:background="@color/cast_intro_overlay_button_background_color"
        android:padding="10dp"
        android:layout_below="@+id/introduction"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/tf_City"
        android:hint="@string/searchCity"
        android:textAlignment="center"
        android:layout_marginBottom="26dp"
        android:layout_above="@+id/btn_SendLoc"
        android:layout_alignStart="@+id/btn_ownLocation" />

    <Button
        android:text="@string/sendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_SendLoc"
        android:onClick="onClickSendCity"
        android:layout_marginBottom="45dp"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:background="@color/cast_intro_overlay_button_background_color"
        android:padding="10dp"
        android:layout_above="@+id/btn_ShowAll"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/wholeList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_ShowAll"
        android:onClick="onClickShowAll"
        android:layout_marginBottom="55dp"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:background="@color/cast_intro_overlay_button_background_color"
        android:padding="10dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
